[gd_scene load_steps=4 format=3 uid="uid://d23qsnmgxegk5"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_gbtgo"]
[ext_resource type="FontFile" uid="uid://cladihgs0vay4" path="res://Fonts/alagard.ttf" id="2_cmqiw"]
[ext_resource type="AudioStream" uid="uid://jrw3fq03011b" path="res://Audio/clickButtom.wav" id="3_kepkv"]

[node name="Pause" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gbtgo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -256.0
offset_right = 244.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_cmqiw")
theme_override_font_sizes/font_size = 46
text = "Resume
"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Fullscreen" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_cmqiw")
theme_override_font_sizes/font_size = 46
text = "Fullscreen
"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_cmqiw")
theme_override_font_sizes/font_size = 46
text = "Menu
"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_cmqiw")
theme_override_font_sizes/font_size = 46
text = "Exit"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_kepkv")
volume_db = -16.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
